--- a/frontend/src/components/Sidebar/Sidebar.module.css
+++ b/frontend/src/components/Sidebar/Sidebar.module.css
@@ -2,17 +2,18 @@
   position: fixed;
   left: 0;
   bottom: 0;
-  top: 58.7px;
+  top: 56px;
   z-index: 3;
   background-color: #f1f3f5;
   padding-top: 1rem;
   display: flex;
   flex-direction: column;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  overflow-x: hidden;
 }
 .overlay {
   position: fixed;
-  top: 58.7px;
+  top: 56px;
   left: 0;
   width: 100vw;
   height: 100vh;
