--- a/frontend/src/components/Sidebar/SidebarItem/SidebarItem.module.css
+++ b/frontend/src/components/Sidebar/SidebarItem/SidebarItem.module.css
@@ -2,13 +2,13 @@
   opacity: 1;
   max-width: 100px;
   overflow: hidden;
-  transition: ease 0.3s;
+  transition: opacity ease 0.3s;
 }
 
 .labelHidden {
   opacity: 0;
-  max-width: 0;
-  transition: ease 0.3s;
+  pointer-events: none;
+  transition: opacity ease 0.3s;
 }
 .link {
   transition: 0.3s ease;
