--- a/frontend/src/components/pages/Profile/ImageOverlay/ImageOverlay.module.css
+++ b/frontend/src/components/pages/Profile/ImageOverlay/ImageOverlay.module.css
@@ -7,7 +7,7 @@
   top: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 3;
+  z-index: 5;
   background-color: rgba(0, 0, 0, 0.433);
   transition: opacity 0.5s ease;
   touch-action: none;
@@ -19,7 +19,7 @@
 }
 .closeIcon {
   pointer-events: inherit;
-  z-index: 4;
+  z-index: 6;
   top: 30px;
   right: 30px;
 }
